--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write .",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --config='./jest.ci-config.ts'"
+    "test:ci": "jest --coverage --config='./jest.ci-config.ts'",
+    "generate-types": "openapi --input ./openapi.json --output ./typescript-client"
   },
   "license": "See LICENSE file",
   "homepage": "https://github.com/SUNET/gnap-client-js",
@@ -42,6 +43,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "openapi-typescript-codegen": "^0.28.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
